--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,91 +1,97 @@
-name: Tests
-
-on:
-  push:
-    branches:
-      - master
-  pull_request:
-    types: [opened, synchronize, reopened]
-
+# GitHub Action for Laravel with MySQL and Redis
+name: API
+on: [ push, pull_request ]
 jobs:
-  test-all:
-    name: Test PHP ${{ matrix.php-version }}
-
-    runs-on: ${{ matrix.operating-system }}
-
-    strategy:
-      matrix:
-        operating-system: [ubuntu-latest]
-        php-version: ['8.0', '8.1', '8.2']
-        include:
-          - operating-system: 'ubuntu-latest'
-            php-version: '8.2'
-            run-sonarqube-analysis: true
-
+  project_build:
+    name: Laravel (PHP ${{ matrix.php-versions }})
+    runs-on: ubuntu-latest
     services:
+      mysql:
+        image: mariadb:10
+        env:
+          MYSQL_ALLOW_EMPTY_PASSWORD: yes
+          MYSQL_ROOT_PASSWORD: 'password'
+          MYSQL_DATABASE: 'testing'
+          MYSQL_USER: 'sail'
+          MYSQL_PASSWORD: 'password'
+        ports:
+          - 3306/tcp
+        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
       redis:
-        image: bitnami/redis:6.2.4-debian-10-r35
+        image: redis
         ports:
-          - 6379:6379
-        env:
-          ALLOW_EMPTY_PASSWORD: 'yes'
-        options: >-
-          --health-cmd "redis-cli -p 6379 ping"
-          --health-start-period 5s
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-      redis-sentinel:
-        image: bitnami/redis-sentinel:6.2.4-debian-10-r39
-        ports:
-          - 26379:26379
-        env:
-          REDIS_MASTER_HOST: redis
-          REDIS_MASTER_SET: mymaster
-          REDIS_SENTINEL_QUORUM: 1
-        options: >-
-          --health-cmd "redis-cli -p 26379 ping"
-          --health-start-period 5s
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-
+          - 6379/tcp
+        options: --health-cmd="redis-cli ping" --health-interval=10s --health-timeout=5s --health-retries=3
+    strategy:
+      fail-fast: true
+      matrix:
+        php-versions: [ '8.2' ]
     steps:
-      - uses: actions/checkout@v3
+      - name: Syncing repo
+        uses: actions/checkout@v3
+      - name: Setup PHP with extensions
+        uses: shivammathur/setup-php@v2 #https://github.com/shivammathur/setup-php
         with:
-          fetch-depth: 0
-
-      - name: Setup PHPUnit
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: ${{ matrix.php-version }}
-          extensions: redis
-          tools: phpunit:9.5.0
-          coverage: pcov
-
-      - name: Setup problem matchers for PHP
-        run: echo "::add-matcher::${{ runner.tool_cache }}/php.json"
-
-      - name: Setup problem matchers for PHPUnit
-        run: echo "::add-matcher::${{ runner.tool_cache }}/phpunit.json"
-
-      - name: Get Composer Cache Directory
-        id: composer-cache
-        run: echo "dir=$(composer config cache-files-dir)" >> $GITHUB_OUTPUT
-
-      - name: Cache Composer dependencies
-        uses: actions/cache@v3
-        with:
-          path: ${{ steps.composer-cache.outputs.dir }}
-          key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
-          restore-keys: ${{ runner.os }}-composer-
-
-      - name: Install composer dependencies
-        run: composer install --prefer-dist
-
-      - name: Run phpunit tests
-        run: composer test
+          php-version: ${{ matrix.php-versions }}
+          extensions: mbstring, dom, fileinfo, mysql
+          coverage: xdebug #optional
+      - name: Setup Project
+        run: |
+          sudo /etc/init.d/mysql start
+          composer install --no-progress --prefer-dist --optimize-autoloader
+          cp .env.ci.dist .env
+          php artisan migrate --seed --force
+          chmod -R 777 storage bootstrap/cache
         env:
-          REDIS_SENTINEL_HOST: 127.0.0.1
-          REDIS_SENTINEL_PORT: 26379
-          REDIS_SENTINEL_SERVICE: mymaster
+          DB_PORT: ${{ job.services.mysql.ports['3306'] }}
+          REDIS_HOST: localhost
+          REDIS_PORT: ${{ job.services.redis.ports['6379'] }}
+#  tests:
+#    name: Tests
+#    runs-on: ubuntu-latest
+#    needs: project_build
+#    services:
+#      mysql:
+#        image: mariadb:10
+#        env:
+#          MYSQL_ROOT_PASSWORD: 'password'
+#          MYSQL_DATABASE: 'testing'
+#          MYSQL_USER: 'sail'
+#          MYSQL_PASSWORD: 'password'
+#        ports:
+#          - 3306/tcp
+#        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
+#      redis:
+#        image: redis
+#        ports:
+#          - 6379/tcp
+#        options: --health-cmd="redis-cli ping" --health-interval=10s --health-timeout=5s --health-retries=3
+#    strategy:
+#      fail-fast: true
+#      matrix:
+#        php-versions: [ '8.2' ]
+#    steps:
+#      - name: Syncing repo
+#        uses: actions/checkout@v2
+#      - name: Setup PHP with extensions
+#        uses: shivammathur/setup-php@v2 #https://github.com/shivammathur/setup-php
+#        with:
+#          php-version: ${{ matrix.php-versions }}
+#          extensions: mbstring, dom, fileinfo, mysql
+#          coverage: xdebug #optional
+#      - name: Setup Project
+#        run: |
+#          sudo /etc/init.d/mysql start
+#          composer install --no-progress --prefer-dist --optimize-autoloader
+#          cp .env.ci.dist .env
+#          cp .env.ci.testing.dist .env.testing
+#          php artisan migrate --seed --force
+#          chmod -R 777 storage bootstrap/cache
+#        env:
+#          DB_PORT: ${{ job.services.mysql.ports['3306'] }}
+#          REDIS_PORT: ${{ job.services.redis.ports['6379'] }}
+#      - name: Execute tests (Unit and Feature tests) via PHPUnit
+#        run: vendor/bin/phpunit --testdox -v --stop-on-defect
+#        env:
+#          DB_PORT: ${{ job.services.mysql.ports['3306'] }}
+#          REDIS_PORT: ${{ job.services.redis.ports['6379'] }}
