--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -11,7 +11,7 @@ jobs:
         env:
           MYSQL_ALLOW_EMPTY_PASSWORD: yes
           MYSQL_ROOT_PASSWORD: 'password'
-          MYSQL_DATABASE: 'testing'
+          MYSQL_DATABASE: 'virtapi'
           MYSQL_USER: 'sail'
           MYSQL_PASSWORD: 'password'
         ports:
@@ -55,7 +55,7 @@ jobs:
         image: mariadb:10
         env:
           MYSQL_ROOT_PASSWORD: 'password'
-          MYSQL_DATABASE: 'testing'
+          MYSQL_DATABASE: 'virtapi'
           MYSQL_USER: 'sail'
           MYSQL_PASSWORD: 'password'
         ports:
