--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -93,7 +93,7 @@ jobs:
           REDIS_HOST: localhost
           REDIS_PORT: ${{ job.services.redis.ports['6379'] }}
       - name: Execute tests (Unit and Feature tests) via PHPUnit
-        run: php artisan test
+        run: vendor/bin/phpunit --testdox --stop-on-defect
         env:
           DB_PORT: ${{ job.services.mysql.ports['3306'] }}
           REDIS_HOST: localhost
