--- a/.scribe/endpoints.cache/02.yaml
+++ b/.scribe/endpoints.cache/02.yaml
@@ -29,7 +29,7 @@ endpoints:
     responses:
       -
         status: 200
-        content: '{"data":[{"id":1,"name":"Brekke, Kuvalis and Baumbach","parent":null}],"links":{"first":"http:\/\/localhost\/api\/v1\/companies?page=1","last":"http:\/\/localhost\/api\/v1\/companies?page=1","prev":null,"next":null},"meta":{"current_page":1,"from":1,"last_page":1,"links":[{"url":null,"label":"&laquo; Previous","active":false},{"url":"http:\/\/localhost\/api\/v1\/companies?page=1","label":"1","active":true},{"url":null,"label":"Next &raquo;","active":false}],"path":"http:\/\/localhost\/api\/v1\/companies","per_page":100,"to":1,"total":1}}'
+        content: '{"data":[{"id":1,"name":"Company 1","descendents":[2,3,1],"parent":null},{"id":2,"name":"Company 2","descendents":[3,2],"parent":{"id":1,"name":"Company 1","descendents":[2,3,1],"parent":null}},{"id":3,"name":"Company 3","parent":{"id":2,"name":"Company 2","descendents":[3,2],"parent":{"id":1,"name":"Company 1","descendents":[2,3,1],"parent":null}}}],"links":{"first":"http:\/\/localhost\/api\/v1\/companies?page=1","last":"http:\/\/localhost\/api\/v1\/companies?page=1","prev":null,"next":null},"meta":{"current_page":1,"from":1,"last_page":1,"links":[{"url":null,"label":"&laquo; Previous","active":false},{"url":"http:\/\/localhost\/api\/v1\/companies?page=1","label":"1","active":true},{"url":null,"label":"Next &raquo;","active":false}],"path":"http:\/\/localhost\/api\/v1\/companies","per_page":100,"to":3,"total":3}}'
         headers:
           cache-control: 'no-cache, private'
           content-type: application/json
@@ -69,19 +69,19 @@ endpoints:
         name: name
         description: ''
         required: true
-        example: saepe
+        example: unde
         type: string
         custom: []
       parent_company_id:
         name: parent_company_id
         description: ''
         required: false
-        example: 14
+        example: 6
         type: integer
         custom: []
     cleanBodyParameters:
-      name: saepe
-      parent_company_id: 14
+      name: unde
+      parent_company_id: 6
     fileParameters: []
     responses: []
     responseFields: []
@@ -111,11 +111,11 @@ endpoints:
         name: company
         description: 'The ID of the company.'
         required: true
-        example: 11
+        example: 15
         type: integer
         custom: []
     cleanUrlParameters:
-      company: 11
+      company: 15
     queryParameters: []
     cleanQueryParameters: []
     bodyParameters: []
@@ -124,7 +124,7 @@ endpoints:
     responses:
       -
         status: 404
-        content: '{"message":"Not found","code":0,"error_message":"No query results for model [App\\Modules\\Company\\Models\\Company] 11"}'
+        content: '{"message":"Not found","code":0,"error_message":"No query results for model [App\\Modules\\Company\\Models\\Company] 15"}'
         headers:
           cache-control: 'no-cache, private'
           content-type: application/json
@@ -161,11 +161,11 @@ endpoints:
         name: company
         description: 'The ID of the company.'
         required: true
-        example: 3
+        example: 19
         type: integer
         custom: []
     cleanUrlParameters:
-      company: 3
+      company: 19
     queryParameters: []
     cleanQueryParameters: []
     bodyParameters:
@@ -173,7 +173,7 @@ endpoints:
         name: name
         description: ''
         required: true
-        example: et
+        example: illum
         type: string
         custom: []
       parent_company_id:
@@ -184,7 +184,7 @@ endpoints:
         type: integer
         custom: []
     cleanBodyParameters:
-      name: et
+      name: illum
       parent_company_id: 18
     fileParameters: []
     responses: []
@@ -215,11 +215,11 @@ endpoints:
         name: company
         description: 'The ID of the company.'
         required: true
-        example: 19
+        example: 2
         type: integer
         custom: []
     cleanUrlParameters:
-      company: 19
+      company: 2
     queryParameters: []
     cleanQueryParameters: []
     bodyParameters: []
