--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -93,7 +93,9 @@ jobs:
           REDIS_HOST: localhost
           REDIS_PORT: ${{ job.services.redis.ports['6379'] }}
       - name: Execute tests (Unit and Feature tests) via PHPUnit
-        run: vendor/bin/phpunit --testdox --stop-on-defect
+        run: | 
+            vendor/bin/phpunit --testdox --stop-on-defect
+            gphp artisan test --coverage
         env:
           DB_PORT: ${{ job.services.mysql.ports['3306'] }}
           REDIS_HOST: localhost
